Implement user authentication with Google, remove unused isLogin function, and update sidebar to reflect login state

--- a/package.json
+++ b/package.json
@@ -19,12 +19,18 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tabler/icons-react": "^3.30.0",
+    "@types/passport": "^1.0.17",
+    "@types/passport-google-oauth20": "^2.0.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.475.0",
+    "mongoose": "^8.10.1",
     "motion": "^12.4.7",
     "next": "15.1.7",
+    "next-auth": "^5.0.0-beta.25",
+    "next-connect": "^1.0.0-next.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "recharts": "^2.15.1",
