Refactor user authentication logic, implement transaction and user models, and set up MongoDB connection

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tabler/icons-react": "^3.30.0",
     "@types/passport": "^1.0.17",
     "@types/passport-google-oauth20": "^2.0.16",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
@@ -31,9 +32,12 @@
     "next": "15.1.7",
     "next-auth": "^5.0.0-beta.25",
     "next-connect": "^1.0.0-next.4",
+    "razorpay": "^2.9.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "recharts": "^2.15.1",
+    "referral-code-generator": "^1.0.8",
+    "referral-codes": "^3.0.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
   },
